# OpenGL

./: .gitignore  CMakeLists.txt  README.md  main.cpp
application/: application.cpp  application.h
assets/shaders/: fragment.glsl  vertex.glsl
glframework/: CMakeLists.txt  core.h  shader.cpp  shader.h  texture.cpp  texture.h
wrapper/: checkError.cpp  checkError.h
